Fix tooltip + fix grag scroll on touch + fix page overflow + fix follow animation

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -45,6 +45,7 @@ body {
 	position: relative;
 	padding-top: $header-height-desktop;
 	background: $color-background;
+	overflow-x: hidden;
 
 	&.dark {
 		background: $color-background-lower1;
